--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Dispatch core-released to meta-repo
         uses: peter-evans/repository-dispatch@v3
         with:
-          token: ${{ secrets.REPO_DISPATCH_TOKEN }}
+          token: ${{ secrets.META_REPO_TOKEN }}
           repository: ostanlabs/agent-execution-layer
           event-type: core-released
           client-payload: |
