feat(auth): implement PRO_AUTH_FOUNDATION_SPEC
Add authentication and identity layer for Ploston Pro tiers:

Core Auth Models:
- Principal, PrincipalType, Scope, ToolAccess, ToolAccessMode
- PrincipalSettings, PrincipalContext, ANONYMOUS_PRINCIPAL

API Key Management:
- Generate keys with plt_{prefix}_{random} format
- bcrypt hashing for secure storage
- Key validation and verification

Principal Store:
- Redis-backed storage for principals
- Bootstrap key support for initial setup
- Last-used tracking

Auth Middleware:
- ProAuthMiddleware for FastAPI integration
- Scope checking and enforcement
- Tool access filtering (allowlist/denylist modes)

Rate Limiting:
- Token bucket algorithm with Redis Lua script
- Per-principal rate limits

Telemetry:
- Add principal_id and principal_type to metrics
- ToolSource enum for tool categorization

Includes 38 unit tests for auth module.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "opentelemetry-exporter-prometheus>=0.45b0",
     "redis>=5.0.0", # Redis config store
     "fastmcp>=2.14.4",
+    "bcrypt>=5.0.0",
 ]
 
 [project.optional-dependencies]
@@ -105,4 +106,5 @@ strict = true
 [dependency-groups]
 dev = [
     "ruff>=0.14.14",
+    "syrupy>=5.1.0",
 ]
